# AudioRouter

./: .gitignore  .gitmodules  CMakeLists.txt  settings.gradle
.github/workflows/: build.yml
app/: build.gradle  lint-baseline.xml
app/src/androidTest/java/com/github/system233/audiorouter/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/include/: boost
app/src/main/cpp/libs/: asio-kcp
app/src/main/cpp/src/: ikcp.hpp  main.cpp
app/src/main/java/com/github/system233/audiorouter/: AudioService.java  MainActivity.java  SettingsActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/layout-w1240dp/: activity_launch.xml
app/src/main/res/layout-w936dp/: activity_launch.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/github/system233/audiorouter/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
src/: aacenc.cpp  audio.hpp  client.cpp  ikcp.hpp  main.cpp
