cmake_minimum_required(VERSION "3.12")
project(kcp)
if(MSVC)
    set(CMAKE_CXX_FLAGS "/EHsc")
else()
    set(CMAKE_CXX_FLAGS "-static")
endif()
add_subdirectory(libs/asio-kcp)
set(BUILD_SHARED_LIBS off)
add_subdirectory(libs/fdk-aac)
add_executable(kcp_s src/main.cpp src/aacenc.cpp)
target_link_libraries(kcp_s fdk-aac asio-kcp winmm ole32 wsock32 Ws2_32)

add_executable(kcp_c src/client.cpp)
target_link_libraries(kcp_c fdk-aac asio-kcp wsock32 Ws2_32)

